--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,9 @@
     ],
     "frameworksBackend": {
       "region": "us-central1"
-    }
+    },
+    "predeploy": [
+      "npm run build"
+    ]
   }
 }
